ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kwikkoder-ingress
  namespace: kwikkoder
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: 'true'  
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
      - frontend.20.69.69.228.nip.io
      secretName: app-web-cert
  rules:
  - host: frontend.20.69.69.228.nip.io
  - http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend: 
            service:
              name: website
              port:
                number: 4200
        - path: /LB/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: leaderboard-api
              port:
                number: 5001
        - path: /LiveComp/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: competition-api
              port:
                number: 5001
        - path: /CompTest/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: competition-api
              port:
                number: 5001
        - path: /api/Comment/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: discussion-api
              port:
                number: 5001
        - path: /api/Forum/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: discussion-api
              port:
                number: 5001
        - path: /api/ForumPost/?(.*)
          pathType: Prefix
          backend: 
            service:
              name: discussion-api
              port:
                number: 5001
